# cpp_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: CODING_GUIDELINES.md
src/: CMakeLists.txt
tests/: CMakeLists.txt
